<resources>
    <string name="app_name">VillaCorp.Systems</string>
    <string name="login">Login</string>
    <string name="please_wait">Harap Tunggu</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_message">Pesan</string>
    <string name="title_profile">Akun</string>
    <string name="title_info">Info</string>
    <string name="title_excuse">Panduan</string>
    <string name="logout">Keluar</string>
    <string name="title_activity_tukar_libur">TukarLiburActivity</string>
</resources>
