<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_info"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/title_info"/>

    <item
            android:id="@+id/navigation_message"
            android:icon="@drawable/ic_email"
            android:title="@string/title_message"/>

    <item
            android:id="@+id/navigation_excuse"
            android:icon="@drawable/ic_pen"
            android:title="@string/title_excuse"/>

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/title_profile"/>

</menu>
